--- a/DiandianIOS/DiandianIOS/DABillDetailViewCell.xib
+++ b/DiandianIOS/DiandianIOS/DABillDetailViewCell.xib
@@ -25,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="单价" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ens-Ep-aN9">
-                                <rect key="frame" x="345" y="11" width="72" height="21"/>
+                                <rect key="frame" x="175" y="11" width="72" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
@@ -56,6 +56,12 @@
                                     <action selector="onBackTouched:" destination="Maz-mw-tfP" eventType="touchUpInside" id="bVb-GI-Zgt"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mic-Ze-Ot4">
+                                <rect key="frame" x="332" y="11" width="85" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -64,6 +70,7 @@
             <connections>
                 <outlet property="btnOperation" destination="V4S-jc-uhO" id="cIs-ta-VxD"/>
                 <outlet property="lblAmount" destination="DvJ-gT-WlS" id="OAj-g4-Rcb"/>
+                <outlet property="lblAmountPrice" destination="Mic-Ze-Ot4" id="k83-YJ-yNO"/>
                 <outlet property="lblName" destination="tVB-gn-XYw" id="Tbu-NA-ErI"/>
                 <outlet property="lblPrice" destination="ens-Ep-aN9" id="vRB-J5-sbm"/>
             </connections>
