bug  fix   1 打印显示序号 2.结账分两步 3.实收款可以手动输入 4.退酒水bug 5.未上菜不显示

--- a/DiandianIOS/DiandianIOS/DABillViewController.xib
+++ b/DiandianIOS/DiandianIOS/DABillViewController.xib
@@ -87,7 +87,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LsQ-OM-ALh">
-                    <rect key="frame" x="743" y="609" width="162" height="75"/>
+                    <rect key="frame" x="728" y="667" width="162" height="75"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="40"/>
                     <state key="normal" backgroundImage="desk_jiebotton.png">
@@ -167,6 +167,17 @@
                     <rect key="frame" x="330" y="29" width="364" height="83"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bKo-7m-dy8">
+                    <rect key="frame" x="728" y="563" width="162" height="57"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                    <state key="normal" title="打 印" backgroundImage="top_bg3.png">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="onPrintTouched:" destination="-1" eventType="touchUpInside" id="VcS-Kg-scB"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
@@ -188,5 +199,6 @@
         <image name="desk_top.png" width="2048" height="129"/>
         <image name="desk_topbotton.png" width="258" height="75"/>
         <image name="desk_word.png" width="729" height="165"/>
+        <image name="top_bg3.png" width="161" height="44"/>
     </resources>
 </document>
