--- a/DiandianIOS/DiandianIOS/DAMyOrderViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAMyOrderViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="13A3028" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="3.0" toolsVersion="4514" systemVersion="13B3116" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DAMyOrderViewController">
             <connections>
                 <outlet property="labelAmount" destination="rXQ-OH-Jfq" id="1i3-FA-32e"/>
+                <outlet property="logoImageView" destination="YIb-4h-Ncn" id="rRX-Na-Swm"/>
                 <outlet property="tableView" destination="YMr-4Z-wRK" id="Vn3-ml-v9D"/>
                 <outlet property="view" destination="2" id="3"/>
             </connections>
