--- a/DiandianIOS/DiandianIOS/DAMyTableViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAMyTableViewController.xib
@@ -81,6 +81,17 @@
                                 <action selector="showTakeoutList:" destination="-1" eventType="touchUpInside" id="wDe-DV-5uc"/>
                             </connections>
                         </button>
+                        <button hidden="YES" opaque="NO" tag="200" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Iq-UX-b7q">
+                            <rect key="frame" x="688" y="12" width="100" height="41"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="账单" backgroundImage="desk_topbotton.png">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="showTakeoutList:" destination="-1" eventType="touchUpInside" id="Iy5-uY-1f7"/>
+                            </connections>
+                        </button>
                         <button opaque="NO" tag="201" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rsf-FB-EL7">
                             <rect key="frame" x="128" y="12" width="100" height="43"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
